<resources>
    <string name="app_name">AC-Test</string>
    <string name="characters">characters</string>
    <string name="locations">Locations</string>
    <string name="retrieving_characters">Retrieving Characters</string>
    <string name="character_detail_not_found">Character Detail no found</string>
    <string name="image_detail_description">image Detail description</string>
    <string name="status">"Status: "</string>
    <string name="location">"Location: "</string>
    <string name="gender">"Gender: "</string>
    <string name="species">"Species: "</string>
    <string name="unknown">Unknown</string>
    <string name="origin">"Origin: "</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="episodes">Episodes</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">Error found</string>
    <string name="connection_established">Reconnected!</string>
    <string name="connection_lost">Connection lost</string>
    <string name="fav_description">Fav description</string>
    <string name="expand_Button_description">Expand button</string>
    <string name="character_detail">Detail</string>
    <string name="navigation_description">Navigation Description</string>
    <string name="transitionLabel">transition</string>
    <string name="background_transition_label">bgColorTransition</string>
    <string name="rounded_corners_label">cardRoundedCorners</string>
    <string name="progress_bar_description">Progress bar content</string>
    <string name="detail_list">detail list</string>
</resources>
